--- a/client/src/components/Topnav/Topnav.css
+++ b/client/src/components/Topnav/Topnav.css
@@ -1,8 +1,3 @@
-* {
-  box-sizing: border-box;
-  margin: 0;
-  padding: 0;
-}
 .Top-nav-container {
   width: 100%;
   height: 6rem;
@@ -10,4 +5,31 @@
   background-color: #f1f3f4;
   top: 0;
   z-index: 0;
+  display: flex;
+  margin-left: 6rem;
+}
+.logo {
+  margin-left: 2rem;
+  background-color: #f1f3f4;
+  height: fit-content;
+  margin-top: auto;
+  margin-bottom: auto;
+}
+.welcome {
+  background-color: #f1f3f4;
+  font-weight: 600;
+  height: fit-content;
+  margin-top: auto;
+  margin-bottom: auto;
+  margin-left: auto;
+  margin-right: 8rem;
+}
+
+@media only screen and (max-width: 780px) {
+  .Top-nav-container {
+    margin-left: 0;
+  }
+  .welcome {
+    margin-right: auto;
+  }
 }
